<resources>
    <string name="app_name">MessageMe</string>

    <string name="calls_status">call status</string>
    <string name="calls_back">call back</string>

    <string name="enter_message">Enter Message</string>
    <string name="connecting">Connecting</string>

    <!-- firebase strings -->


    <string name="search">Search</string>

    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="video_call">video call</string>

    <string name="notif_action_reply">Reply</string>

    <string name="default_notification_channel_id">default</string>
    <string name="notification_message">"New message from %1$s"</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="confirm_mute">This will mute this conversation, you will not receive notifications from this chat, proceed?</string>
    <string name="confirm_unmute">This will unmute this conversation, you will receive notifications from this chat, proceed?</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="confirm_block">This will block this user, you will not be able to contact each other, proceed?</string>
    <string name="confirm_unblock">Unblock this user?</string>
    <string name="copy_text">Message text copied</string>

    <string name="reply">Reply</string>

    <string name="contact_name">Name : %s</string>
    <string name="contact_status">Status : %s</string>
    <string name="contact_recent_messages">Recent Message : %s</string>
    <string name="blocked">Contact is %s blocked</string>
    <string name="coming_soon">Coming soon</string>
    <string name="choose_picture">Select Picture</string>
    <string name="new_picture">New Picture Message</string>
    <string name="new_message">New Message</string>
    <string name="message_not_sent">Message not sent</string>
    <string name="message_sent">Message sent</string>
    <string name="blocked_user">You are blocked from contacting this user</string>
    <string name="blank_message">This message text is blank Are you sure you want to send it?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_delete">Are you sure you want to permanently delete these messages</string>
    <string name="deleting_update">Deleting %d messages</string>
    <string name="deleted_update">Deleted %d of %d messages \nErrors %d</string>

    <string name="message_detail">Sender : %s \nMessage Text: %s \nDate Sent : %s \nImage Size : %s x %s \nReceived : %s \nUrl : %s </string>
    <string name="backup_progress">Backing up contact %d of %d</string>
    <string name="check_contacts_progress">Checking for contacts, found %d contacts</string>
    <string name="checked_contacts_progress">Checking contact %d of %d\n%d contacts found"</string>
    <string name="no_connection">Please enable your Internet Connection, and swipe down to check again</string>
    <string name="no_conversations">No Conversations</string>
    <string name="no_unread">No Unread</string>
    <string name="no_calls">No Calls</string>
    <string name="no_status">No Status</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="incoming_call_from">Incoming call from</string>
    <string name="accept_call">Accept</string>
    <string name="reject_call">Reject</string>
    <string name="sorry">Sorry</string>
    <string name="no_friends_swipe_down">Seems none of your friends have our app, swipe down to check again</string>
    <string name="got_it">Got it</string>
    <string name="contact_preview_profile">Your Profile</string>
    <string name="contact_preview_blocked">Blocked</string>
    <string name="contact_preview_close">Close</string>
    <string name="app_pseudo_name">MessageMe</string>
    <string name="area_code">+44</string>
    <string name="no_messages">No Messages</string>
    <string name="bottom_nav_calls">Calls</string>
    <string name="bottom_nav_convo">Convos</string>
    <string name="bottom_nav_status">Status</string>
    <string name="bottom_sheet_cam">Camera</string>
    <string name="bottom_sheet_attach">Attach</string>
    <string name="bottom_sheet_gallery">Gallery</string>
    <string name="bottom_sheet_file">File</string>
    <string name="build_contact_list">Building contacts list</string>
    <string name="contacts_problem">There was a problem with your contacts</string>
    <string name="contacts_access">Contacts access</string>
    <string name="confirm_contact_access">Please confirm Contacts access</string>
    <string name="no_permissions">No Permissions Given</string>
    <string name="sign_in_success">Successfully signed in. Welcome!</string>

    <string name="oops">Oops, something went wrong</string>
    <string name="sent">Sent</string>
    <string name="received">Received</string>
    <string name="ok">OK</string>
    <string name="share_with">Share With...</string>
    <string name="Please_wait">Please wait</string>
    <string name="profile_check">Checking for your profile</string>
    <string name="no_profile_found">No profile found</string>
    <string name="validate_name_failed">Please enter a name</string>
    <string name="validate_status_failed">Please enter a status</string>
    <string name="validate_number_failed">Please enter a phone number</string>
    <string name="validate_id_failed">Please enter an id</string>
    <string name="validate_profile_image_failed">Please choose a profile picture</string>
    <string name="failed_creating_profile">failed to create profile, please try again</string>
    <string name="profile_name_hint">Profile Name</string>
    <string name="profile_status_hint">Profile Status</string>
    <string name="update_profile">Updating your profile</string>
    <string name="update_complete">Profile Update</string>
    <string name="sign_in_failed">Sign In Failed</string>
    <string name="invalid_code">Code is invalid</string>
    <string name="invalid_number_44">Please remove the +44</string>
    <string name="invalid_number_0">Please remove the first zero</string>
    <string name="invalid_number">Phone number is invalid</string>

    <string name="convo_menu_delete">Delete</string>
    <string name="convo_menu_copy">Copy</string>
    <string name="convo_menu_settings">Settings</string>
    <string name="convo_menu_mute">Mute</string>
    <string name="convo_menu_block">Block</string>

    <!-- CONTENT DESCRIPTIONS -->

    <string name="background_image">Background Image</string>
    <string name="logo_image">Application Logo</string>
    <string name="profile_image">User Profile Image</string>
    <string name="emoji_image">Emoji Button, Press to select an emoji</string>
    <string name="received_image">Received image</string>
    <string name="sent_image">Sent image</string>
    <string name="attach_file">Attach Button, Press to select an select a file or image</string>


    <string name="send_button">Send</string>
    <string name="select_profile_image">Select your profile image</string>
    <string name="share_button">Share</string>
    <string name="info_button">Info</string>
    <string name="phone_icon">phone icon</string>

    <string name="call_missed">Call missed</string>
    <string name="call_made">Call made</string>
    <string name="call_received">Call received</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

</resources>
