<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.algolia.instantsearch.examples.media.MediaActivity">

    <item
        android:id="@+id/action_vid_call"
        android:title="@string/video_call"
        android:icon="@drawable/baseline_videocam_white_18dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/delete"
        android:title="@string/convo_menu_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="ifRoom"
        android:visible="false"
        android:enabled="false"/>

    <item
        android:id="@+id/copy"
        android:title="@string/convo_menu_copy"
        android:icon="@drawable/baseline_file_copy_white_24"
        app:showAsAction="ifRoom"
        android:visible="false"
        android:enabled="false"/>


    <item
        android:title=""
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:orderInCategory="101"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/preferences"
                android:title="@string/convo_menu_settings"/>
            <item
                android:id="@+id/mute"
                android:title="@string/convo_menu_mute"/>
            <item
                android:id="@+id/block"
                android:title="@string/convo_menu_block"/>
        </menu>

    </item>


</menu>
