<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_convo"
        android:enabled="true"
        android:icon="@drawable/baseline_chat_bubble_white_18dp"
        android:title="@string/bottom_nav_convo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_calls"
        android:enabled="true"
        android:icon="@drawable/baseline_phone_white_18dp"
        android:title="@string/bottom_nav_calls"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_status"
        android:enabled="true"
        android:icon="@drawable/baseline_mood_white_18dp"
        android:title="@string/bottom_nav_status"
        app:showAsAction="ifRoom" />

</menu>