<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <TextView
        android:text="@string/incoming_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:layout_margin="25dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:contentDescription="@string/profile_image"
        android:src="@drawable/contact_placeholder"
        android:layout_marginBottom="@dimen/fab_margin"
        app:civ_border_width="2dp"
        app:civ_border_color="#FFFFFF"/>

    <TextView
        android:id="@+id/caller_id"
        android:text="@string/incoming_call_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:layout_margin="25dp"
        />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp">

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/accept"
            android:onClick="acceptCall"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/rejectCall"
            android:src="@drawable/ic_phone_black_24dp"
            android:tint="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/accept_text"
            android:text="@string/accept_call"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/accept"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/reject_text" />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="rejectCall"
            android:id="@+id/rejectCall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/accept"
            android:src="@drawable/baseline_call_end_24"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reject_text"
            android:text="@string/reject_call"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/accept_text"
            app:layout_constraintTop_toBottomOf="@id/rejectCall"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </android.support.constraint.ConstraintLayout>

</LinearLayout>
