<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/background_image" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.github.florent37.shapeofview.shapes.ArcView
            android:id="@+id/shape_of_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shape_arc_cropDirection="outside"
            app:shape_arc_height="28dp"
            app:shape_arc_position="bottom">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <net.grobas.view.MovingImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:src="@drawable/mail_pattern"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:miv_load_on_create="true"
                    app:miv_max_relative_size="3"
                    app:miv_min_relative_offset="0.2"
                    app:miv_repetitions="-1"
                    app:miv_speed="100"
                    app:miv_start_delay="1000" />

                <TextView
                    android:id="@+id/profile_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:text="@string/contact_preview_profile"
                    android:textColor="@color/grey"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/icon"
                    android:layout_width="146dp"
                    android:layout_height="146dp"
                    android:layout_marginBottom="@dimen/fab_margin"
                    android:src="@drawable/contact_placeholder"
                    android:contentDescription="@string/profile_image"
                    app:civ_border_color="#FFFFFF"
                    app:civ_border_width="2dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/profile_text" />

                <TextView
                    android:id="@+id/phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:textColor="@color/grey"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />


            </android.support.constraint.ConstraintLayout>
            <!-- YOUR CONTENT -->

        </com.github.florent37.shapeofview.shapes.ArcView>


        <TextView
            android:id="@+id/field_phone_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="@dimen/custom_margin"
            android:text="@string/contact_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shape_of_view" />


        <TextView
            android:id="@+id/status_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/contact_status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/field_phone_name" />

        <TextView
            android:id="@+id/recent_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/contact_recent_messages"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status_text" />

        <TextView
            android:id="@+id/blocked"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/contact_preview_blocked"
            app:layout_constraintEnd_toStartOf="@id/block_switch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recent_message" />

        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/block_switch"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/blocked"
            app:layout_constraintTop_toTopOf="@id/blocked"
            app:layout_constraintBottom_toBottomOf="@id/blocked"
            />


        <Button
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:contentDescription=""
            android:textColor="@color/colorAccent"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/block_switch"
            android:text="@string/contact_preview_close"/>


    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>


    </RelativeLayout>