<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_layout"
    tools:context="com.sealstudios.aimessage.MessageListActivity"
    >

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/background"
        android:src="@drawable/message_background"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/results"
        android:text="@string/no_messages"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/reyclerview_message_list"
        app:layout_constraintBottom_toTopOf="@id/start_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

    </android.support.v7.widget.RecyclerView>

    <android.support.v7.widget.CardView
        android:id="@+id/start_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="20dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/send"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="lollipop">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageButton
                android:id="@+id/add_emoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_mood_black_24"
                android:background="?android:attr/selectableItemBackground"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/emoji_image" />

            <com.vanniktech.emoji.EmojiEditText
                android:id="@+id/message_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxHeight="200dp"
                android:maxLines="6"
                android:hint="@string/new_message"
                android:imeOptions="actionSend"
                android:inputType="textCapSentences|textMultiLine"
                app:layout_constraintEnd_toStartOf="@id/add_attachment"
                app:layout_constraintStart_toEndOf="@id/add_emoji"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageButton
                android:id="@+id/add_attachment"
                android:background="?android:attr/selectableItemBackground"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_attach_file_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/attach_file" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>


    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/send"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_send_white_24dp"
        android:layout_marginRight="4dp"
        app:civ_border_color="@color/colorAccent"
        app:civ_border_width="12dp"
        app:civ_fill_color="@color/colorAccent"
        app:layout_constraintTop_toTopOf="@id/start_container"
        app:layout_constraintBottom_toBottomOf="@id/start_container"
        app:layout_constraintStart_toEndOf="@id/start_container"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="4dp" />

</android.support.constraint.ConstraintLayout>

    <include layout="@layout/bottom_sheet"/>

    </android.support.design.widget.CoordinatorLayout>
